Changed Story, Added Global Variables, Procedure, and Boolean Function

--- a/PROJECT_2/sdi-project2.html
+++ b/PROJECT_2/sdi-project2.html
@@ -11,7 +11,7 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>This week I will be continuing to work on some of the process and JavaScript that may be used in my son's new company Web site.</p>
+<p>This week I will continue to work on some of the processes and JavaScript that may be used in my son's new company Web site.</p>
 </article>
 <footer>
     <p>OCTOBER 6, 2012, DENISE M. GILBERT</p>
