Altered HTML Story and Added Number Function

--- a/PROJECT_2/sdi-project2.html
+++ b/PROJECT_2/sdi-project2.html
@@ -11,7 +11,7 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>This week I will continue to work on some of the processes and JavaScript that may be used in my son's new company Web site.</p>
+<p>This week my story is about preparing for the upcoming Christmas holiday.  I selected this theme because Christmas is one of my favorite holidays and is right around the corner.</p>
 </article>
 <footer>
     <p>OCTOBER 6, 2012, DENISE M. GILBERT</p>
