Added and Refactored Code From Last Week, Fixed Bugs in Current Code

--- a/PROJECT_3/sdi-project3.html
+++ b/PROJECT_3/sdi-project3.html
@@ -16,6 +16,7 @@
 <footer>
     <p>OCTOBER 11, 2012, DENISE M. GILBERT</p>
 </footer>
+<script type="text/javascript" src="json.js"></script>
 <script type="text/javascript" src="gilbert_denise_assignment3.js"></script>
 </body>
 </html>
